Attempt to fix background jump on mobile

--- a/styles.css
+++ b/styles.css
@@ -48,19 +48,13 @@
 
 }
 
-body::before {
-  content: "";
-  position: fixed;
-  inset: 0;
-  background-image: url(/assets/images/backgroundstars.png);
-  background-size: 900px;
-  background-repeat: repeat;
-  z-index: -1;
-}
-
-body {
-  font-family: Oswald;
-}
+body{
+    background-image: url(/assets/images/backgroundstars.png);
+    background-attachment: scroll;
+    background-size: 900px;
+    background-repeat: repeat;
+    font-family: Oswald;
+  }
 
 
   html {
